test/expected/large/dataplans/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: dataplans
    foo.com/duversion: 1.5.102-20190924.1569376664087
    foo.com/version: 1.5.102
  labels:
    app.kubernetes.io/name: dataplans
    helm.sh/chart: dataplans-1.5.102
  name: dataplans
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dataplans
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dataplans
        app.kubernetes.io/name: dataplans
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-dataplans:1.5.102-20190924.1569376664087
        imagePullPolicy: IfNotPresent
        name: dataplans
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
