test/expected/large/dataplans/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: dataplans
    foo.com/duversion: 1.5.102-20190924.1569376664087
    foo.com/version: 1.5.102
  labels:
    app.kubernetes.io/name: dataplans
    helm.sh/chart: dataplans-1.5.102
  name: dataplans
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: dataplans
  type: ClusterIP
