test/expected/large/dataplans/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dataplans
    foo.com/duversion: 1.5.102-20190924.1569376664087
    foo.com/version: 1.5.102
  labels:
    app.kubernetes.io/name: dataplans
    helm.sh/chart: dataplans-1.5.102
  name: dataplans
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataPlans
    - uri:
        prefix: /dataPlans/
    route:
    - destination:
        host: dataplans.peekay.svc.cluster.local
